2024-05-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-local-host-regexp): Add OpenSUSE host names.

	* tramp-compat.el (tramp-nspawn): Warn, if that package is used.

	* tramp-container.el (tramp-nspawn-program): New defcustom.
	(tramp-nspawn-method): New defconst.
	(tramp-nspawn--completion-function, tramp-enable-nspawn-method):
	New defuns.

2024-05-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-enable-run0-method): New defun.
	(tramp-sh-handle-expand-file-name): Add "run0".
	(tramp-maybe-open-connection): Simplify setting timeout.

	* tramp-cmds.el (tramp-file-name-with-method): Add "run0".

	* tramp.el (tramp-completion-dissect-file-name):
	* tramp-cmds.el (tramp-list-remote-buffers):
	* tramp-smb.el (tramp-smb-handle-insert-directory):
	Use `tramp-compat-keep-seq'.

2024-05-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-seq-keep): New defalias.

	* tramp.el (tramp-enable-method):
	* tramp-adb.el (tramp-adb-parse-device-names):
	* tramp-cache.el (tramp-list-connections):
	* tramp-cmds.el (tramp-bug, tramp-append-tramp-buffers):
	* tramp-container.el (tramp-container--completion-function)
	(tramp-toolbox--completion-function)
	(tramp-flatpak--completion-function)
	(tramp-apptainer--completion-function):
	* tramp-rclone.el (tramp-rclone-parse-device-names): Use it.

2024-05-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-enable-method): Implement completion for
	interactive use.

	* tramp-androidsu.el (tramp-enable-androidsu-method): Use proper
	regexp for `tramp-default-user-alist'.
	(Top): Wrap call of `tramp-enable-androidsu-method' with
	`tramp--with-startup'.

	* tramp-sh.el (tramp-enable-nc-method, tramp-enable-ksu-method)
	(tramp-enable-krlogin-method, tramp-enable-fcp-method):
	New defuns.  Move respective configurations there.

2024-05-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-enable-method): New defun.
