@@ -4660,8 +4660,11 @@ Do not set it manually, it is used buffer-local in `tramp-get-lock-pid'.")
 	       ((process-live-p (tramp-get-process v)))
 	       (lockname (tramp-compat-make-lock-file-name file)))
           (delete-file lockname)
-	;; Trigger the unlock error.
-	(signal 'file-error `("Cannot remove lock file for" ,file)))
+	;; Trigger the unlock error.  Be quiet if user isn't
+	;; interested in lock files.  See Bug#70900.
+	(unless (or (not create-lockfiles)
+		    (bound-and-true-p remote-file-name-inhibit-locks))
+	  (signal 'file-error `("Cannot remove lock file for" ,file))))
     ;; `userlock--handle-unlock-error' exists since Emacs 28.1.  It
     ;; checks for `create-lockfiles' since Emacs 30.1, we don't need
     ;; this check here, then.
